--- a/Office-ProPlus-Deployment/Microsoft.ProPlus.InstallGenerator/InstallGenWPF/Views/ProductView.xaml
+++ b/Office-ProPlus-Deployment/Microsoft.ProPlus.InstallGenerator/InstallGenWPF/Views/ProductView.xaml
@@ -305,26 +305,26 @@
                                     <ComboBox Width="360" x:Name="NewVersion" Grid.Column="2"  Grid.Row="0"
                                               Height="35" HorizontalAlignment="Left" IsTextSearchEnabled="True"
                                               Style="{StaticResource MetroComboBoxStyle}" 
-                                              Controls:TextBoxHelper.Watermark="16.0.4949.1003"
+                                              Controls:TextBoxHelper.Watermark=""
                                               DisplayMemberPath="Version"
                                               IsEditable="True"
-                                              ItemsSource="{Binding Builds}"
+                                              ItemsSource="{Binding NewVersions}"
                                               MaxDropDownHeight="125"
                                               FontSize="20"
-                                              Text="{Binding Path=Version}" FontFamily="Segoe UI Semilight"  />
+                                              Text="{Binding Path=NewProductVersion}" FontFamily="Segoe UI Semilight"  />
                                     <Label Content="Build" Style="{StaticResource CustomMetroLabelHeader}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Segoe UI Semibold" />
 
 
                                     <ComboBox Width="360" x:Name="ProductBuild" Grid.Column="2"  Grid.Row="1"
                                               Height="35" HorizontalAlignment="Left" IsTextSearchEnabled="True"
                                               Style="{StaticResource MetroComboBoxStyle}" 
-                                              Controls:TextBoxHelper.Watermark="16.0.4949.1003"
+                                              Controls:TextBoxHelper.Watermark=""
                                               DisplayMemberPath="Version"
                                               IsEditable="True"
-                                              ItemsSource="{Binding Builds}"
+                                              ItemsSource="{Binding NewBuilds}"
                                               MaxDropDownHeight="125"
                                               FontSize="20"
-                                              Text="{Binding Path=Version}" FontFamily="Segoe UI Semilight"  />
+                                              Text="{Binding Path=NewProductBuild}" FontFamily="Segoe UI Semilight"  />
                                     <Button x:Name="VersionInfo" Width="30" Height="32" HorizontalAlignment="Center"  Grid.Row="2"
                                                 Focusable="False"  Style="{StaticResource MetroInfoButton}" Click="ProductInfo_OnClick"  >
                                         <StackPanel Orientation="Horizontal">
